# thermal-printer-tg-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  justfile  rust-toolchain.toml
nix/modules/: devshell.nix  rust.nix
src/: main.rs
src/io/: driver.rs
src/util/: downloader.rs
